--- a/us-elections/package.json
+++ b/us-elections/package.json
@@ -7,8 +7,9 @@
     "start-local": "webpack-dev-server --env.local --progress --hot --open"
   },
   "dependencies": {
-    "deck.gl": "^8.3.0",
     "@deck.gl/carto": "^8.3.0",
+    "@material-ui/core": "^4.11.0",
+    "deck.gl": "^8.3.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-map-gl": "^5.2.8",
